Add environment variable for Web3Forms API key and clean up console logs

--- a/package.json
+++ b/package.json
@@ -46,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "conflicting-package-1": "1.2.3",
+    "conflicting-package-2": "4.5.6"
+   
   }
 }
