--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+},
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -50,5 +51,10 @@
   "overrides": {
     "conflicting-package-1": "1.2.3",
     "conflicting-package-2": "4.5.6"
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  },
+  "homepage": "https://RohnRoy.github.io/my-portfolio"
+
 }
